--- a/.fonts.conf
+++ b/.fonts.conf
@@ -10,13 +10,13 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Roboto</family>
+      <family>Noto Sans</family>
     </prefer>
   </alias>
   <alias>
     <family>serif</family>
     <prefer>
-      <family>Liberation Serif</family>
+      <family>Noto Serif</family>
     </prefer>
   </alias>
 </fontconfig>
