--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,12 +1,15 @@
 {
     "editor.formatOnSave": true,
     "workbench.colorTheme": "One Dark Pro",
-    "editor.fontFamily": "'ProggyVector','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'ProggyVector','Droid Sans Mono', 'monospace', monospace",
     "oneDarkPro.italic": false,
     "oneDarkPro.bold": true,
     "oneDarkPro.vivid": true,
     "go.toolsManagement.autoUpdate": true,
     "files.autoSave": "onFocusChange",
     "vscode-neovim.neovimExecutablePaths.linux": "/home/elp/bin/nvim.appimage",
-    "vscode-neovim.neovimInitVimPaths.linux": "/home/elp/.config/nvim/init.vim"
+    "vscode-neovim.neovimInitVimPaths.linux": "/home/elp/.config/nvim/init.vim",
+    "editor.autoClosingBrackets": "never",
+    "editor.autoClosingQuotes": "never",
+    "workbench.editor.enablePreview": false
 }
